# kinect_driver

./: CMakeLists.txt  README.md  log.txt
cmake/: FindOpenNI.cmake
include/: KinectDriver.h  OniReader.h
src/: KinectDriver.cpp  OniReader.cpp  OnlineRecord.cpp
